# gemm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements_dev.txt  setup.py
cpp/: tensor.cpp  tensor.hpp  tensor_test.cpp
cpp_wrapper/: tensor_wrapper.cpp
python/benchmark/: benchmark_api.py  benchmark_tensor.py
python/test/: test.py
